Added fill_province.ipynb - fill จังหวัด with province form master_data

--- a/source/fill_province.ipynb
+++ b/source/fill_province.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-01T13:55:05.975083Z",
-     "start_time": "2025-04-01T13:55:05.969365Z"
+     "end_time": "2025-04-02T14:31:10.715203Z",
+     "start_time": "2025-04-02T14:31:07.565838Z"
     }
    },
    "cell_type": "code",
@@ -15,13 +15,13 @@
    ],
    "id": "b83eac30ac08626a",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-01T13:55:07.855971Z",
-     "start_time": "2025-04-01T13:55:07.851081Z"
+     "end_time": "2025-04-02T14:31:20.871381Z",
+     "start_time": "2025-04-02T14:31:20.859580Z"
     }
    },
    "cell_type": "code",
@@ -56,13 +56,13 @@
    ],
    "id": "95e1c9389ee6f223",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-01T13:55:09.582410Z",
-     "start_time": "2025-04-01T13:55:09.578442Z"
+     "end_time": "2025-04-02T14:31:21.754108Z",
+     "start_time": "2025-04-02T14:31:21.750524Z"
     }
    },
    "cell_type": "code",
@@ -82,13 +82,13 @@
    ],
    "id": "2540f0003ea692fb",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-01T14:01:14.044707Z",
-     "start_time": "2025-04-01T14:01:14.033409Z"
+     "end_time": "2025-04-02T14:31:22.401247Z",
+     "start_time": "2025-04-02T14:31:22.396073Z"
     }
    },
    "cell_type": "code",
@@ -97,6 +97,9 @@
     "    \"\"\"\n",
     "    Process accident data and determine province for each location\n",
     "    \"\"\"\n",
+    "    import json\n",
+    "    import pandas as pd\n",
+    "\n",
     "    # Read the GeoJSON data with all province boundaries\n",
     "    with open(boundary_json, 'r', encoding='utf-8') as f:\n",
     "        geojson_data = json.load(f)\n",
@@ -111,8 +114,9 @@
     "    total_rows = len(df)\n",
     "    print(f\"Processing {total_rows} accident records...\")\n",
     "\n",
-    "    # Initialize the province column\n",
-    "    df['province'] = ''\n",
+    "    # Initialize the province column if it doesn't exist\n",
+    "    if 'province' not in df.columns:\n",
+    "        df['province'] = ''\n",
     "\n",
     "    # Process each accident location\n",
     "    for idx, row in df.iterrows():\n",
@@ -132,9 +136,19 @@
     "            print(f\"Error processing row {idx}: {e}\")\n",
     "            continue\n",
     "\n",
+    "    # แทนที่ค่าที่หายไปใน 'จังหวัด' ด้วยค่าจาก 'province'\n",
+    "    if 'จังหวัด' in df.columns:\n",
+    "        filled = df['จังหวัด'].isna().sum()\n",
+    "        df['จังหวัด'] = df['จังหวัด'].fillna(df['province'])\n",
+    "        print(f\"Filled {filled} missing 'จังหวัด' values from 'province'\")\n",
+    "    else:\n",
+    "        df['จังหวัด'] = df['province']\n",
+    "\n",
+    "    # ถ้า 'จังหวัด' ไม่มี missing แล้ว ค่อย drop 'province'\n",
+    "    if df['จังหวัด'].isna().sum() == 0 and 'province' in df.columns:\n",
+    "        df = df.drop(columns=['province'])\n",
+    "\n",
     "    # Save the results\n",
-    "    df = df.drop(columns=['จังหวัด'])\n",
-    "    df = df.rename(columns={'province': 'จังหวัด'})\n",
     "    df.to_csv(output_csv, index=False, encoding='utf-8')\n",
     "    print(\"Processing completed!\")\n",
     "\n",
@@ -145,13 +159,13 @@
    ],
    "id": "d26a543fb1bec804",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-01T14:01:16.261942Z",
-     "start_time": "2025-04-01T14:01:16.107092Z"
+     "end_time": "2025-04-02T14:31:25.185810Z",
+     "start_time": "2025-04-02T14:31:25.029927Z"
     }
    },
    "cell_type": "code",
@@ -558,18 +572,18 @@
        "</div>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-01T14:04:35.847501Z",
-     "start_time": "2025-04-01T14:04:29.491334Z"
+     "end_time": "2025-04-02T14:31:32.598711Z",
+     "start_time": "2025-04-02T14:31:26.391109Z"
     }
    },
    "cell_type": "code",
@@ -608,34 +622,27 @@
       "Processed 17000 rows (87.7%)...\n",
       "Processed 18000 rows (92.8%)...\n",
       "Processed 19000 rows (98.0%)...\n",
+      "Filled 43 missing 'จังหวัด' values from 'province'\n",
       "Processing completed!\n",
       "\n",
       "Accidents by province:\n",
       "จังหวัด\n",
-      "กรุงเทพมหานคร    2305\n",
+      "กรุงเทพมหานคร    2493\n",
       "ชลบุรี           1224\n",
-      "นครราชสีมา        912\n",
-      "สุพรรณบุรี        579\n",
-      "เชียงใหม่         575\n",
+      "นครราชสีมา        908\n",
+      "สุพรรณบุรี        589\n",
+      "เชียงใหม่         572\n",
       "                 ... \n",
-      "พิจิตร             51\n",
       "อำนาจเจริญ         49\n",
       "แม่ฮ่องสอน         40\n",
-      "ระนอง              36\n",
-      "หนองคาย            30\n",
+      "ระนอง              37\n",
+      "หนองคาย            31\n",
+      "                    5\n",
       "Name: count, Length: 78, dtype: int64\n"
      ]
     }
    ],
-   "execution_count": 25
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "ff01d23ef5e7cf2"
+   "execution_count": 6
   }
  ],
  "metadata": {
